# ml-assessment

./: README.md  pyproject.toml
algorithms/: README.md  main.py
apis/: README.md  fakerpc.py  main.py  test_fakerpc.py  test_main.py
models/: README.md  data_challenge.csv
